# ml-automation-timeseries

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude-plugin/: plugin.json
.claude/commands/: review.md
.claude/rules/: plugin.md  python.md  testing.md
.cortex-plugin/: activation.md  plugin.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit-poll.yml  claude-review.yml  docs.yml  weekly-audit.yml
agents/: anomaly-detector.md  forecaster.md  timeseries-analyst.md
commands/: ts-analyze.md  ts-anomaly.md  ts-backtest.md  ts-decompose.md  ts-evaluate.md  ts-forecast.md
docs/: index.md
prompts/: weekly-audit.md
schemas/: audit-finding.schema.json  finding.schema.json
scripts/: claude_review.py  post_findings.py  process_audit_results.py  regen_claude_md.py  submit_audit_batch.py  validate_plugin.py
skills/ts-analyze/: SKILL.md
skills/ts-anomaly/: SKILL.md
skills/ts-backtest/: SKILL.md
skills/ts-decompose/: SKILL.md
skills/ts-evaluate/: SKILL.md
skills/ts-forecast/: SKILL.md
templates/: timeseries_utils.py
tests/: conftest.py  test_smoke.py
